--- a/css/style.css
+++ b/css/style.css
@@ -2365,7 +2365,7 @@ color: white;
    position: absolute;
     right: 10%;
 }
- header {width: 85%;
+ header {width: 100%;
 }
   
 header .container .list ul{
@@ -2565,14 +2565,14 @@ font-size: 15px;
 /*******************************LIST*********************************/
 
 .list .title{
-    padding: 25% 0;
+    padding: 25% 10px;
     
 }
 .list .title h1{
-    font-size: 18px;
+    font-size: 16px;
 }
 .list .title .lis{
-    font-size: 18px;
+    font-size: 16px;
 }
 .list .title .lis li {
     font-size: 10px;
@@ -2583,6 +2583,8 @@ font-size: 15px;
 
 
 .list .container{
+  width: 100%;
+  padding: 15px;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
